--- a/WebLegemClient/src/common/directives/footer/wlegem-footer.directive.html
+++ b/WebLegemClient/src/common/directives/footer/wlegem-footer.directive.html
@@ -1,28 +1,28 @@
 ﻿<div class="a_footer">
     <div class="sub_footer1">
         <div id="f_1">
-            <p>Contactenos</p>
+            <p>{{vm.language.strings.Contactenos}}</p>
             <hr />
-            <span class="ico-university ico_f2"></span> Universidad de Nariño</br>
+            <span class="ico-university ico_f2"></span> {{vm.language.strings.UniversidadNarino}}</br>
             <span class="ico2-location2 ico_f2"></span> Torobajo - Calle 18 Crr 50</br>
             <span class="ico-phone ico_f2"></span> PBX: (2)-7311449 - 18000957071</br>
-            <span class="ico-envelope ico_f2"></span> e-mail: planeacion@udenar.edu.co
+            <span class="ico-envelope ico_f2"></span> {{vm.language.strings.Email}}: planeacion@udenar.edu.co
         </div>
         <div id="f_2">
-            <p>Siguenos</p>
+            <p>{{vm.language.strings.Siguenos}}</p>
             <hr />
             <a class="ico-facebook-square ico_f" href="https://www.facebook.com/udenar"></a>
             <a class="ico-twitter-square ico_f" href="https://twitter.com/Udenar"></a><br />
-            <span class="ico-university f_link"><a class="f_link" href="http://www.udenar.edu.co/"> Universidad de Nariño</a>   </span>
+            <span class="ico-university f_link"><a class="f_link" href="http://www.udenar.edu.co/"> {{vm.language.strings.UniversidadNarino}}</a>   </span>
 
         </div>
         <div id="f_3">
-            <p>Acerca del Sitio</p>
+            <p>{{vm.language.strings.AcercaSitio}}</p>
             <hr />
             <br />
             <img src="recursos/footer/valid-css-blue.png" />
             <img src="recursos/footer/valid-html40-blue.png" />
-            <br />Desarrollado por:<br />
+            <br />{{vm.language.strings.DesarrolladoPor}}<br />
             Adriana Rodriguez - Andres Solarte - Mario Florez
         </div>
     </div>
