--- a/WebLegemClient/src/common/directives/fotografia/fotografia.directive.html
+++ b/WebLegemClient/src/common/directives/fotografia/fotografia.directive.html
@@ -1,6 +1,33 @@
-﻿<div class='ng-modal' ng-show='vm.show'>    
-    <div class='ng-modal-overlay' ng-click='hideModal()'></div><!--Simula la opacidad de fondo del dialogo-->
-    <div class='ng-modal-dialog'>
-        <div class='ng-modal-dialog-content' ng-transclude ></div><!--contenido personalisable-->
+﻿<div class='a-modal' ng-if='vm.show'>
+
+    <div class='a-modal-overlay' ng-click='vm.cerrarCamara()'></div>
+    <div class='a-modal-dialog'>
+        <div class='a-modal-close verde'>
+            <div class="a-titulo-modal verde">{{vm.language.strings.HacerFoto}}</div>
+            <button title="Cerrar camara" ng-click="vm.cerrarCamara()">
+                <span class="ico-times"></span>
+            </button>
+        </div>
+        <div class='a-modal-contenido'>
+            <div class="contenido_fotografia">
+                <div class="canvas_container" ng-init="vm.iniciar()">
+                    <video ng-show="vm.foto" id="camaraUsu" width="320" height="240" autoplay></video>
+                    <canvas ng-show="!vm.foto" id="fotoUsu" width="320" height="240"></canvas>
+                </div>
+
+                <div id="botonera_fotografia">
+                    <button ng-show="vm.foto" class="btn_con_ico" ng-click="vm.snapshot();">
+                        <span class="ico-camera tamano_botones_1"></span>{{vm.language.strings.TomarFoto}}
+                    </button>
+                    <button ng-show="!vm.foto" class="btn_con_ico" ng-click="vm.repetirFoto();">
+                        <span class="ico-camera tamano_botones_1"></span>{{vm.language.strings.RepetirFoto}}
+                    </button>
+                    <button ng-show="!vm.foto" class="btn_con_ico" ng-click="vm.guardarFoto()">
+                        <span class="ico-camera tamano_botones_1"></span>{{vm.language.strings.GuardarFoto}}
+                    </button>
+                </div>
+            </div>
+            <img src="" id="aux_imagen" style="visibility:hidden;width:0;height:0;" />
+        </div>
     </div>
 </div>
