--- a/WebLegemClient/src/common/directives/header/wlegem-header.directive.html
+++ b/WebLegemClient/src/common/directives/header/wlegem-header.directive.html
@@ -23,7 +23,7 @@
 
                 <a class="btn_menu sin_ani">
                     <div class=" ico-cubes"></div>
-                    <p>Componentes</p>
+                    <p>{{vm.language.strings.Componentes}}</p>
                 </a>
                 <ul ng-show="vm.toggle_menu" class="desplegar">
                     <li ng-repeat="opcion in vm.arregloOpciones" ng-click="vm.resize && vm.desplegarMenu()">
@@ -55,13 +55,13 @@
                     <li ng-click="vm.resize && vm.desplegarMenu()">
                         <a class="btn_menu sub" ui-sref="cuenta">
                             <div class="ico-cog"></div>
-                            <p>Configurar Cuenta</p>
+                            <p>{{vm.language.strings.ConfigurarCuenta}}</p>
                         </a>
                     </li>
                     <li ng-click="vm.resize && vm.desplegarMenu()">
                         <a class="btn_menu sub" ng-click="vm.LogOut()">
                             <div class="ico-sign-out"></div>
-                            <p>Salir</p>
+                            <p>{{vm.language.strings.Salir}}</p>
                         </a>
                     </li>
                 </ul>
@@ -80,7 +80,7 @@
             </a>
 
             <ul class="content-accesibilidad" ng-show="vm.toggle_acce">
-                <label><span class="ico2-contrast"></span>Contraste</label>
+                <label><span class="ico2-contrast"></span>{{vm.language.strings.Contraste}}</label>
                 <li>
                     <button class="boton_accesibilidad activo" ng-click="vm.funcion_contraste('bajo',$event)">
                         <span class="ico-sun-o"></span>
@@ -91,13 +91,13 @@
                     </button>
 
                 </li>
-                <label><span class="ico2-earth"></span>Idioma</label>
+                <label><span class="ico2-earth"></span>{{vm.language.strings.Idioma}}</label>
                 <li>
                     <button class="boton_accesibilidad idioma activo" ng-click="vm.funcion_idioma('es',$event)">
-                        <p>Español</p>
+                        <p>{{vm.language.strings.Espanol}}</p>
                     </button>
                     <button class="boton_accesibilidad idioma" ng-click="vm.funcion_idioma('en',$event)">
-                        <p>Ingles</p>
+                        <p>{{vm.language.strings.Ingles}}</p>
                     </button>
                 </li>
                 <label><span class="ico2-font-size"></span>{{ vm.language.strings.tamanoFuente }}</label>
