--- a/WebLegemClient/src/common/directives/info-rol/info-rol.directive.html
+++ b/WebLegemClient/src/common/directives/info-rol/info-rol.directive.html
@@ -3,7 +3,7 @@
     <div class='ng-modal-overlay'></div><!--Simula la opacidad de fondo del dialogo-->
     <div class='ng-modal-dialog'>
         <div class='ng-modal-close'>
-            <p class="titulo modal">Permisos</p>
+            <p class="titulo modal">{{vm.language.strings.permisos}}</p>
             <button class="btn_ico" title="Cerrar dialogo" ng-click="hideModal()">
                 <span class=" ico-times"></span>
             </button>
@@ -12,11 +12,11 @@
 
             <table class="a_tabla">
                 <tr>
-                    <th>Modulo</th>
-                    <th>Lectura</th>
-                    <th>Escritura</th>
-                    <th>Edicion</th>
-                    <th>Eliminacion</th>
+                    <th>{{vm.language.strings.Modulo}}</th>
+                    <th>{{vm.language.strings.Lectura}}</th>
+                    <th>{{vm.language.strings.Escritura}}</th>
+                    <th>{{vm.language.strings.Edicion}}</th>
+                    <th>{{vm.language.strings.Eliminacion}}</th>
                 </tr>
 
                 <tr ng-repeat="modulo in rol">
