--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -235,6 +235,7 @@
     <link href="css/directivas/lista-doc-encontrado.css" rel="stylesheet" />
     <link href="css/directivas/lista-ano-encontrado.css" rel="stylesheet" />
     <link href="css/directivas/fotografia.css" rel="stylesheet" />
+    <link href="css/directivas/asociar_documento.css" rel="stylesheet" />
 
     <!--Estilos Componentes-->
     <link href="css/componentes/wl-lista-anotaciones.css" rel="stylesheet" />
