--- a/WebLegemClient/src/common/directives/asociar-documento/asociar-documento.directive.html
+++ b/WebLegemClient/src/common/directives/asociar-documento/asociar-documento.directive.html
@@ -1,59 +1,100 @@
-﻿<div class='ng-modal' ng-show='vm.show'>
-    <div class='ng-modal-overlay' ng-click='vm.cerrarDialogo()'></div><!--Simula la opacidad de fondo del dialogo-->
-    <div class='ng-modal-dialog'>
+﻿<div class='a-modal' ng-if='vm.show'>
+    <div class='a-modal-overlay' ng-click='vm.cerrarDialogo()'></div><!--Simula la opacidad de fondo del dialogo-->
+    <div class='a-modal-dialog'>
 
-        <div class='a-modal-close'>
-            <div class="a-titulo-modal">Buscar Documento</div>
+        <div class='a-modal-close verde'>
+            <div class="a-titulo-modal verde">Asociar Documento</div>
             <button title="Cerrar dialogo" ng-click="vm.cerrarDialogo()">
                 <span class="ico-times"></span>
             </button>
         </div>
+        <!--  ///////////////////////////////////////////////////////////////////////////////////////// -->
+        <div class='a-modal-contenido'>
+            <div class="generic-box-vertical">
+                <div class="box_father ani-pasos">
+                    <div class=" box_left" ng-show="vm.ban_mostrar_buscador">
+                        <label class="ca_label_busqueda" ng-if="!vm.ban_crear_doc">{{vm.language.strings.SeleccioneDocumentoAnotara}}:</label>
+                        <label class="ca_label_busqueda" ng-if="vm.ban_crear_doc">{{vm.language.strings.CompleteDatosCrearDocumento}}:</label>
 
-        <div class='ng-modal-dialog-content'>
+                        <wl-buscar-doc crear-doc="vm.ban_nuevo_doc" cancel-crear-doc="vm.ban_buscar_doc" ban-mostrar="vm.ban_mostrar_buscador"
+                                       crear-ano="vm.ban_anotacion">
+                        </wl-buscar-doc>
+                    </div>
 
-            <div class="box_father ani-pasos">
-                <div class=" box_left">
-                    <label class="ca_label_busqueda" ng-if="!vm.ban_crear_doc">seleccione el documento al cual se anotará:</label>
-                    <label class="ca_label_busqueda" ng-if="vm.ban_crear_doc">complete los datos para crear el documento:</label>
-                    <wl-buscar-doc crear-doc="vm.ban_crear_doc">  </wl-buscar-doc>
-                </div>
+                    <div class="box_right" ng-show="!vm.ban_nuevo_doc">
+                        <!--mensaje de error si no se encuentra coinsididencias-->
+                        <label class="msj-error">
+                            No se encontro ningun documento con esa identificacion, desea crear un
+                            <a ng-click="vm.nuevoDocumento();" href="" title="Crear documento"> nuevo documento</a>
+                        </label>
 
-                <div class="box_right">
-                    <!--mensaje de error si no se encuentra coinsididencias-->
-                    <label class="msj-error">
-                        No se encontro ningun documento con esa identificacion, desea crear un
-                        <a ng-click="vm.ban_crear_doc = true" href="" title="Crear documento"> nuevo documento</a>
-                    </label>
-
-                    <wl-lista-doc-encontrado ng-hide="vm.ban_crear_doc" ban-crear-anotacion="vm.ban_crear_ano">  </wl-lista-doc-encontrado>
-
-                    <div class="generic-box-vertical" ng-if="vm.ban_crear_doc">
-                        <div>
-                            <label class="texto_labels">Tipo de Anotación:</label>
-                            <div class="a_select">
-                                <select type="text" placeholder="Escriba entidad emisora" ng-model="vm.tipoDocumentoAux"
-                                        ng-options="tipoDocumento.nombre as tipoDocumento.nombre for tipoDocumento in vm.tiposDocumento| orderBy: 'nombre'"></select>
+                        <div class="generic-box-vertical" ng-if="vm.ban_anotacion">
+                            <div class="generic-box-horizontal resumen_asociar_doc">
+                                <div class="generic-box-vertical">
+                                    <div class="ico-lde"><span class="ico-file-text-o"></span></div>
+                                    <a>acuerdo 25 del 20 de julio del 2008</a>
+                                    <p>Entidad:</p>
+                                    <i>Faculta d ingeniera de sistemas</i>
+                                    <p>Fecha de publicacion:</p>
+                                    <i>30 de julio de 2008 </i>
+                                </div>
+                                <div class="flecha_rad"><div class="ico-lde"><span class="ico-long-arrow-right"></span></div></div>
+                                <div class="generic-box-vertical">
+                                    <div class="ico-lde"><span class="ico-file-text-o"></span></div>
+                                    <a>acuerdo 25 del 20 de julio del 2008</a>
+                                    <p>Entidad:</p>
+                                    <i>Faculta d ingeniera de sistemas</i>
+                                    <p>Fecha de publicacion:</p>
+                                    <i>30 de julio de 2008 </i>
+                                </div>
+                            </div>
+                            <div class="generic-box-vertical">
+                                <div>
+                                    <label class="texto_labels">Tipo de Anotación:</label>
+                                    <div class="a_select">
+                                        <select type="text" placeholder="Escriba entidad emisora" ng-model="vm.tipoDocumentoAux"
+                                                ng-options="tipoDocumento.nombre as tipoDocumento.nombre for tipoDocumento in vm.tiposDocumento| orderBy: 'nombre'"></select>
+                                    </div>
+                                </div>
+                                <div>
+                                    <label class="texto_labels">Descripcion de la Anotación:</label>
+                                    <textarea class="a_text_area"></textarea>
+                                </div>
                             </div>
                         </div>
-                        <div>
-                            <label class="texto_labels">Descripcion de la Anotación:</label>
-                            <textarea class="a_text_area"></textarea>
+
+
+                        <wl-lista-doc-encontrado ng-if="vm.ban_buscar_doc" crear-anotacion="true">  </wl-lista-doc-encontrado>
+
+
+                    </div>
+                </div>
+                <div class="box_father">
+                    <div class="box_right">
+                        <div class="divisor-pasos"><div></div></div>
+                        <div class="controles-crear-anotacion">
+                            <button class="btn_sin_ico" ng-click="vm.crearAnotacion()">
+                                Cancelar
+                            </button>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="box_father">
-                <div class="box_right">
-                    <div class="divisor-pasos"><div></div></div>
-                    <div class="controles-crear-anotacion">
-                        <button class="btn_sin_ico" ng-click="vm.crearAnotacion()">
-                            Seleccionar
-                        </button>
-                    </div>
-                </div>
-            </div>
-
-
-        </div><!--contenido personalisable-->
+        </div>
+        <!--  ///////////////////////////////////////////////////////////////////////////////////////// -->
     </div>
 </div>
+
+<!--<div class="generic-box-vertical" ng-if="vm.ban_crear_doc">
+    <div>
+        <label class="texto_labels">Tipo de Anotación:</label>
+        <div class="a_select">
+            <select type="text" placeholder="Escriba entidad emisora" ng-model="vm.tipoDocumentoAux"
+                    ng-options="tipoDocumento.nombre as tipoDocumento.nombre for tipoDocumento in vm.tiposDocumento| orderBy: 'nombre'"></select>
+        </div>
+    </div>
+    <div>
+        <label class="texto_labels">Descripcion de la Anotación:</label>
+        <textarea class="a_text_area"></textarea>
+    </div>
+</div>-->
