crear anotacion interfaz

--- a/WebLegemClient/src/common/directives/anotacion-asistida/wl-anotacion-asistida.directive.html
+++ b/WebLegemClient/src/common/directives/anotacion-asistida/wl-anotacion-asistida.directive.html
@@ -8,7 +8,7 @@
     <div class="box_left flex-3">
         <label class="ca_label_busqueda">Vista previa del documento:</label>
         <iframe ng-show="true"
-                src="http://docs.google.com/gview?url=http://victorpimentel.com/stuff/rubik.pdf&embedded=true"
+                src="http://docs.google.com/gview?url=recurso.pdf&embedded=true"
                 class="de-vpdf none-mt" frameborder="0"></iframe>
 
     </div>
