edicion y eliminacion iterfacez

--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -180,6 +180,7 @@
     <link href="css/elementos/uploader.css" rel="stylesheet" />
     <link href="css/elementos/tabs.css" rel="stylesheet" />
     <link href="css/elementos/tabla.css" rel="stylesheet" />
+    <link href="css/elementos/circulo_carga.css" rel="stylesheet" />
     <link href="css/plantillas/informacion_documento.css" rel="stylesheet" />
     <link href="css/plantillas/tipo_documento.css" rel="stylesheet" />
     <link href="css/principal.css" rel="stylesheet" />
