crear anotacion, aun no funiciona traer documentos

--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -24,8 +24,7 @@
     <script src="../bower_components/angular-file-upload/dist/angular-file-upload.min.js"></script>
     <script src="../bower_components/quill/dist/quill.min.js"></script>
     <script src="../bower_components/ngQuill/src/ng-quill.min.js"></script>
-    <script src="../bower_components/angular-media-queries/match-media.js"></script>
-    <link href="../bower_components/normalize-css/normalize.css" rel="stylesheet" />
+    <script src="../bower_components/angular-media-queries/match-media.js"></script>    
 
     <!-- App Scripts -->
 
@@ -152,6 +151,7 @@
     <script src="common/mocks/rol-resource.mock.js"></script>
     <script src="common/mocks/permisos-resource.mock.js"></script>
     <script src="common/mocks/usuarios-resource.mock.js"></script>
+    <script src="common/mocks/documento-resource.mock.js"></script>
 
     <!-- Services -->
     <script src="common/services/common.services.js"></script>
@@ -268,8 +268,7 @@
     <script src="common/directives/info-anotacion/info-anotacion.directive.js"></script>
     <script src="common/directives/info-anotacion/info-anotacion.controller.js"></script>
 
-    <script src="common/directives/header/wlegem-header.controller.js"></script>
-    <script src="common/directives/info-rol/info-rol.controller.js"></script>
+    <script src="common/directives/header/wlegem-header.controller.js"></script>    
 
     <script src="common/directives/resultado-busqueda/wlegem-resultado-busqueda.controller.js"></script>
     <script src="common/directives/resultado-busqueda/wlegem-resultado-busqueda.directive.js"></script>
