--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -88,7 +88,8 @@
     <script src="common/components/wl-lista-ano-encontrado/wl-lista-ano-encontrado.directive.js"></script>
     <script src="common/components/wl-lista-ano-encontrado/wl-lista-ano-encontrado.controller.js"></script>
 
-
+    <script src="common/components/wl-lista-tipos-anotacion/wl-lista-tipos-anotacion.directive.js"></script>
+    <script src="common/components/wl-lista-tipos-anotacion/wl-lista-tipos-anotacion.controller.js"></script>
     <!-- Login -->
     <script src="app/login/login.js"></script>
     <script src="app/login/login.dependencies.js"></script>
