--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -90,6 +90,9 @@
 
     <script src="common/components/wl-lista-tipos-anotacion/wl-lista-tipos-anotacion.directive.js"></script>
     <script src="common/components/wl-lista-tipos-anotacion/wl-lista-tipos-anotacion.controller.js"></script>
+
+    <script src="common/components/wl-seguridad-pass/wl-seguridad-pass.directive.js"></script>
+    <script src="common/components/wl-seguridad-pass/wl-seguridad-pass.controller.js"></script>
     <!-- Login -->
     <script src="app/login/login.js"></script>
     <script src="app/login/login.dependencies.js"></script>
