validaciones usuarios y roles

--- a/WebLegemClient/src/common/directives/info-rol/info-rol.directive.html
+++ b/WebLegemClient/src/common/directives/info-rol/info-rol.directive.html
@@ -1,14 +1,14 @@
-﻿<div class='ng-modal' ng-if='show'>
+﻿<div class='a-modal' ng-if='show'>
 
-    <div class='ng-modal-overlay'></div><!--Simula la opacidad de fondo del dialogo-->
-    <div class='ng-modal-dialog'>
-        <div class='ng-modal-close'>
-            <p class="titulo modal">{{vm.language.strings.permisos}}</p>
-            <button class="btn_ico" title="Cerrar dialogo" ng-click="hideModal()">
+    <div class='a-modal-overlay'></div><!--Simula la opacidad de fondo del dialogo-->
+    <div class='a-modal-dialog'>
+        <div class='a-modal-close verde'>
+            <p class="a-titulo-modal verde">{{vm.language.strings.permisos}}</p>
+            <button title="Cerrar dialogo" ng-click="hideModal()">
                 <span class=" ico-times"></span>
             </button>
         </div>
-        <div class='ng-modal-dialog-content'>
+        <div class='a-modal-contenido'>
 
             <table class="a_tabla">
                 <tr>
