--- a/WebLegemClient/src/common/directives/noticias/wlegem-news.directive.html
+++ b/WebLegemClient/src/common/directives/noticias/wlegem-news.directive.html
@@ -1,5 +1,5 @@
 ﻿<div class="a_news">
-
+    <!-- TODO - cambiar documento por contenido en todas las noticias -->
     <div class="titulo_news">
 
         <div>
@@ -45,7 +45,7 @@
                     <a ng-click="vm.infoAnotacion = !vm.infoAnotacion; vm.anotaciones = documento; ">
                         <span class="ico-sticky-note-o"></span>{{vm.language.strings.Anotado}}
                     </a>
-                    <a href="http://localhost:50555/api/Files/{{ documento.archivo }}">
+                    <a href="{{ vm.serviceUrl }}/Files/{{ documento.archivo }}">
 
                         <span class="ico-download"></span>{{vm.language.strings.Descargar}}
                     </a>
