--- a/WebLegemClient/src/common/directives/resultado-busqueda/wlegem-resultado-busqueda.directive.html
+++ b/WebLegemClient/src/common/directives/resultado-busqueda/wlegem-resultado-busqueda.directive.html
@@ -1,54 +1,26 @@
-﻿<div ng-if="false" class="tarjeta_busqueda" ng-repeat="documento in vm.arregloDocs | orderBy: vm.predicate: vm.reverse">
-
+﻿
+<div ng-if="true" class="tarjeta_busqueda" ng-repeat="contenido in vm.arregloDocs | orderBy: vm.predicate: vm.reverse">    
     <div class="titulo_tarjeta">
-        <a ng-click="vm.ver(documento.archivo)">{{ documento.tipoDocumento.nombre }} {{ documento.numero }} del {{ documento.fechaPublicacion | date: 'yyyy' }}</a>
+        <a ng-click="vm.ver(contenido.archivo.id)">        
+            {{ contenido.documento.tipoDocumento.nombre }}
+            {{ contenido.documento.numero }}
+            del {{ contenido.documento.fechaPublicacion | date: 'yyyy' }}
+        </a>
     </div>
 
     <div class="contenido_tarjeta">
-        {{ documento.asunto | limitTo: 250: 200 }}
+        {{ contenido.asunto | limitTo: 50: 0 }}
     </div>
 
     <div class="subcontenido_tarjeta">
-        <a>{{vm.language.strings.Entidad}}: <i>{{ documento.entidad.nombre }} </i> | </a>
-        <a>{{vm.language.strings.Fecha}}: <i>{{ documento.fechaPublicacion | date: 'dd/MM/yyyy' }} </i> | </a>
+        <a>{{vm.language.strings.Entidad}}: <i>{{ contenido.documento.entidad.nombre }} </i> | </a>
+        <a>{{vm.language.strings.Fecha}}: <i>{{ contenido.documento.fechaPublicacion | date: 'dd/MM/yyyy' }} </i> | </a>
     </div>
 
     <div class="control_tarjeta">
-        <a href="http://localhost:50555/api/Files/{{ documento.archivo }}">
+        <a href="{{vm.serviceUrl}}/Files/{{ contenido.archivo.id }}">
             <span class="ico-download"></span>{{vm.language.strings.Descargar}}
         </a>
-    </div>
-</div>
-
-<!-- Mocks de Andres -->
-<!-- ***********************************************
-    QUITAAAAAAAAAAAAAAAAAAAAAAAAR LA PRIMERA PARTE DE
-    LA COMPROBACION, SOLO CREADA PARA EL MOCK DE ANDRES
-    ***********************************************-->
-
-<div ng-if="true" class="tarjeta_busqueda" ng-repeat="documento in vm.arregloDocs">
-
-    <div class="titulo_tarjeta">
-        <a ng-click="vm.ver(documento.archivo)">{{ documento.tipoDocumento }} {{ documento.numero }} del {{ documento.fecha }}</a>
-    </div>
-
-    <div class="contenido_tarjeta">
-        {{ documento.asunto | limitTo: 250: 200 }}
-    </div>
-
-    <div class="subcontenido_tarjeta">
-        <a>{{vm.language.strings.Entidad}}: <i>{{ documento.entidad }} </i> | </a>
-        <a>{{vm.language.strings.Fecha}}: <i>{{ documento.fecha  }} </i> | </a>
-    </div>
-
-    <div class="control_tarjeta">
-        <a ng-click="vm.infoAnotacion = !vm.infoAnotacion; vm.anotaciones = documento; ">
-            <span class="ico-sticky-note-o"></span>{{vm.language.strings.Anotado}}
-        </a>
-        <a href="http://localhost:50555/api/Files/{{ documento.archivo }}">
-            <span class="ico-download"></span>{{vm.language.strings.Descargar}}
-        </a>
-
     </div>
 </div>
 
