interfaz administracion y gestion documental

--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -173,6 +173,7 @@
     <script src="common/services/rol-resource.service.js"></script>
     <script src="common/services/permisos-resource.service.js"></script>
     <script src="common/services/usuarios-resource.service.js"></script>
+    <script src="common/services/string.service.js"></script>
 
     <!-- Filters -->
     <script src="common/filters/common.filters.js"></script>
