--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -24,7 +24,7 @@
     <script src="../bower_components/angular-file-upload/dist/angular-file-upload.min.js"></script>
     <script src="../bower_components/quill/dist/quill.min.js"></script>
     <script src="../bower_components/ngQuill/src/ng-quill.min.js"></script>
-    <script src="../bower_components/angular-media-queries/match-media.js"></script>    
+    <script src="../bower_components/angular-media-queries/match-media.js"></script>
 
     <!-- App Scripts -->
 
@@ -96,6 +96,10 @@
     <script src="common/components/wl-titulo-nav/wl-titulo-nav.directive.js"></script>
     <script src="common/components/wl-titulo-nav/wl-titulo-nav.controller.js"></script>
 
+    <script src="common/components/wl-lista-correos/wl-lista-correos.directive.js"></script>
+    <script src="common/components/wl-lista-correos/wl-lista-correos.controller.js"></script>
+
+
     <!-- Login -->
     <script src="app/login/login.js"></script>
     <script src="app/login/login.dependencies.js"></script>
@@ -127,6 +131,7 @@
     <script src="app/gestion-documental/gestion-documental.dependencies.js"></script>
     <script src="app/gestion-documental/gestion-documental.routes.js"></script>
     <script src="app/gestion-documental/documento/documento.controller.js"></script>
+
 
     <!-- Usuarios  -->
     <script src="app/usuarios/usuarios.dependencies.js"></script>
@@ -279,7 +284,7 @@
     <script src="common/directives/info-anotacion/info-anotacion.directive.js"></script>
     <script src="common/directives/info-anotacion/info-anotacion.controller.js"></script>
 
-    <script src="common/directives/header/wlegem-header.controller.js"></script>    
+    <script src="common/directives/header/wlegem-header.controller.js"></script>
 
     <script src="common/directives/resultado-busqueda/wlegem-resultado-busqueda.controller.js"></script>
     <script src="common/directives/resultado-busqueda/wlegem-resultado-busqueda.directive.js"></script>
